docs: add get messages api docs
